file syntax fixed