@@ -1,372 +1,3 @@
-
-plugins {
-    id 'application'
-    id 'java'
-    id 'checkstyle'
-    id 'jacoco'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'org.springframework.boot' version '2.7.1'
-    id 'org.owasp.dependencycheck' version '7.1.0.1'
-    id 'com.github.ben-manes.versions' version '0.42.0'
-    id 'org.sonarqube' version '3.4.0.2513'
-    id 'au.com.dius.pact' version '4.3.9'
-    id 'io.freefair.lombok' version '6.5.0.2'
-}
-
-group = 'uk.gov.hmcts.et'
-version = '0.0.1'
-
-allprojects {
-    sourceCompatibility = '11.0'
-    targetCompatibility = '11.0'
-}
-
-checkstyle {
-    maxWarnings = 2927
-    toolVersion = '8.29'
-}
-
-def sonarExclusions = ['**/uk/gov/hmcts/ethos/replacement/docmosis/config/**',
-                       '**/uk/gov/hmcts/ethos/replacement/docmosis/model/**',
-                       '**/uk/gov/hmcts/reform/ethos/replacement/docmosis/CaseOrchestrationApplication',
-                       '**/uk/gov/hmcts/ethos/replacement/docmosis.config.DevQueueClient.java',
-                       '**/uk/gov/hmcts/ethos/replacement/docmosis/domain/admin/**'
-]
-
-sonarqube {
-    properties {
-        property "sonar.exclusions", sonarExclusions.join(', ')
-        property "sonar.projectKey", "et-ccd-callbacks"
-        property "sonar.dynamicAnalysis", "reuseReports"
-        property "sonar.dependencyCheck.reportPath", "${project.buildDir}/reports/dependency-check-report.xml"
-        property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
-    }
-}
-
-project.tasks['sonarqube'].dependsOn jacocoTestReport
-
-sourceSets {
-    test {
-        java.srcDir 'src/test/java'
-    }
-    functional {
-        java.srcDir 'src/test/functional/java'
-        resources.srcDir 'src/test/functional/resources'
-        compileClasspath += main.output + test.output
-        runtimeClasspath += main.output + test.output
-    }
-    contractTest {
-        java {
-            compileClasspath += main.output
-            runtimeClasspath += main.output
-            java.srcDir 'src/test/contractTest/java'
-            resources.srcDir 'src/test/contractTest/resources'
-        }
-        resources.srcDir file('src/test/contractTest/resources')
-    }
-    integrationTest {
-        java {
-            compileClasspath += main.output
-            runtimeClasspath += main.output
-            srcDir file('src/test/integration/java')
-        }
-        resources.srcDir file('src/test/integration/resources')
-    }
-}
-
-configurations {
-    functionalImplementation.extendsFrom testImplementation
-    functionalRuntimeOnly.extendsFrom testRuntimeOnly
-    contractTestImplementation.extendsFrom testImplementation
-    contractTestRuntimeOnly.extendsFrom testRuntimeOnly
-    integrationTestImplementation.extendsFrom testImplementation
-    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
-}
-
-test {
-    exclude '**/*ComponentTest*'
-    useJUnitPlatform()
-}
-
-task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verification', dependsOn: ':codeceptSmoke') {
-    testClassesDirs = sourceSets.functional.output.classesDirs
-    classpath = sourceSets.functional.runtimeClasspath
-
-    useJUnit {
-        includeCategories 'uk.gov.hmcts.ethos.replacement.functional.SmokeTest'
-    }
-    systemProperty('VAULTNAME', System.getenv('VAULTNAME'))
-}
-
-task functional(type: Test, description: 'Runs the functional tests.', group: 'Verification', dependsOn: ':codeceptFunctional') {
-    testClassesDirs = sourceSets.functional.output.classesDirs
-    classpath = sourceSets.functional.runtimeClasspath
-
-    useJUnit {
-        includeCategories 'uk.gov.hmcts.ethos.replacement.functional.SmokeTest'
-    }
-
-    systemProperty('VAULTNAME', System.getenv('VAULTNAME'))
-    maxHeapSize = '1G'
-}
-
-task yarnInstall(type: Exec) {
-    workingDir '.'
-    commandLine 'yarn', 'install'
-}
-
-task codeceptSmoke(type: Exec, dependsOn: ':yarnInstall') {
-    commandLine './node_modules/codeceptjs/bin/codecept.js', 'run', '-c', './src/test/end-to-end/', '--grep', '@smoke', '--steps', '--reporter', 'mocha-multi'
-}
-
-task codeceptFunctional(type: Exec, dependsOn :'yarnInstall') {
-    commandLine './node_modules/codeceptjs/bin/codecept.js', 'run', '-c', './src/test/end-to-end/', '--grep', '@e2e', '--steps', '--reporter', 'mocha-multi'
-}
-
-task crossbrowser(dependsOn: ':codeceptFunctionalSauce') {
-    group = 'Delivery pipeline'
-    description = 'Execute cross browser tests on saucelabs'
-}
-
-task nightlyFunctional(dependsOn: ':codeceptFunctionalNightly') {
-    group = 'Delivery pipeline'
-    description = 'Execute Functional Tests on nightly pipeline'
-}
-
-task codeceptFunctionalSauce(type: Exec, dependsOn: ':yarnInstall') {
-    workingDir '.'
-    commandLine './node_modules/codeceptjs/bin/codecept.js', 'run-multiple', '--all', '--config', './src/test/end-to-end/saucelabs.conf.js', '--grep', '@crossbrowser', '--verbose', '--debug', '--steps', '--reporter', 'mocha-multi'
-}
-
-task codeceptFunctionalNightly(type: Exec, dependsOn :'yarnInstall') {
-    commandLine './node_modules/codeceptjs/bin/codecept.js', 'run', '-c', './src/test/end-to-end/', '--grep', '@nightly', '--steps', '--reporter', 'mocha-multi'
-}
-
-task integration(type: Test) {
-    description = "Runs integration tests"
-    group = "Verification"
-    testClassesDirs = sourceSets.integrationTest.output.classesDirs
-    classpath = sourceSets.integrationTest.runtimeClasspath
-    failFast = true
-}
-
-project.tasks['check'].dependsOn integration
-
-project.ext {
-    pacticipant = 'ethos_replDocmosisService'
-    pacticipantVersion = getCheckedOutGitCommitHash()
-}
-
-def getCheckedOutGitCommitHash() {
-    'git rev-parse --verify --shirt HEAD'.execute().text.trim()
-}
-
-task runContractTests(type: Test, description: 'Runs contract tests.', group: 'Verification') {
-    onlyIf {
-        return System.env.SKIP_CONTRACT_TESTS == null || System.env.SKIP_CONTRACT_TESTS == 'false'
-    }
-    useJUnitPlatform()
-    testClassesDirs = sourceSets.contractTest.output.classesDirs
-    classpath = sourceSets.contractTest.runtimeClasspath
-    systemProperty 'pact.rootDir', "pacts"
-    testLogging.showStandardStreams = true
-}
-
-task runAndPublishConsumerPactTests(type: Test, description: 'Publish pact test to broker.', group: 'Verification') {
-    logger.lifecycle("Runs pact consumer Tests")
-
-    testClassesDirs = sourceSets.contractTest.output.classesDirs
-    classpath = sourceSets.contractTest.runtimeClasspath
-}
-
-rootProject.tasks.named("processContractTestResources") {
-    duplicatesStrategy = 'include'
-}
-
-runAndPublishConsumerPactTests.finalizedBy pactPublish
-
-pact {
-    broker {
-        pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
-    }
-    publish {
-        pactDirectory = 'pacts'
-        tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
-        version = project.pacticipantVersion
-    }
-}
-
-task fortifyScan(type: JavaExec)  {
-    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
-    classpath += sourceSets.test.runtimeClasspath
-    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
-}
-
-jacocoTestReport {
-    executionData(test)
-    reports {
-        xml.required = true
-        csv.required = false
-        xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
-    }
-}
-
-jacocoTestCoverageVerification {
-    violationRules {
-        rule {
-            limit {
-                minimum = 0.0
-            }
-        }
-    }
-}
-
-// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
-dependencyCheck {
-    // Specifies if the build should be failed if a CVSS score above a specified level is identified.
-    // range of 0-10 fails the build, anything greater and it doesn't fail the build
-    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
-    suppressionFile = 'config/owasp/suppressions.xml'
-    analyzers.assemblyEnabled = false
-}
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-    maven { url "https://jitpack.io" }
-}
-
-ext {
-    feignVersion = '11.8'
-    junitJupiterVersion = '5.8.1'
-    log4JVersion = '2.17.2'
-    logbackVersion = '1.2.11'
-    pact_version = '4.1.7'
-    reformLoggingVersion = '5.1.9'
-    serenity = '2.3.31'
-    tomcatEmbedVersion = '9.0.58'
-}
-
-dependencyManagement {
-    dependencies {
-        dependencySet(group: 'com.google.guava', version: '31.1-jre') {
-            entry 'guava'
-        }
-        dependencySet(group: 'io.netty', version: '4.1.78.Final') {
-            entry 'netty-buffer'
-            entry 'netty-codec'
-            entry 'netty-codec-http'
-            entry 'netty-codec-socks'
-            entry 'netty-common'
-            entry 'netty-handler'
-            entry 'netty-handler-proxy'
-            entry 'netty-resolver'
-            entry 'netty-transport'
-            entry 'netty-transport-native-epoll'
-            entry 'netty-transport-native-kqueue'
-            entry 'netty-transport-native-unix-common'
-        }
-    }
-}
-
-dependencies {
-    //CVE-2021-42550
-    implementation group: 'ch.qos.logback', name: 'logback-core', version: logbackVersion
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: logbackVersion
-    implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.13.3', ext: 'pom'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
-    implementation group: 'com.github.hmcts', name: 'et-common', version:'0.0.38'
-    implementation group: 'com.github.hmcts', name: 'et-data-model', version:'1.0.29'
-    implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
-    implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
-    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: reformLoggingVersion
-    implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: reformLoggingVersion
-    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.23'
-    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
-    implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: feignVersion
-    implementation group: 'io.github.openfeign', name: 'feign-core', version: feignVersion
-    implementation group: 'io.netty', name: 'netty-tcnative-classes', version: '2.0.52.Final'
-    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.21'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
-    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
-    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.26'
-    implementation group: 'org.apache.santuario', name: 'xmlsec', version: '3.0.0'
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: tomcatEmbedVersion
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: tomcatEmbedVersion
-    //to remove vulnerability CVE-2020-11987
-    implementation group: 'org.apache.xmlgraphics', name: 'batik-svgbrowser', version: '1.14'
-    //To Remove vulnerability CVE-2020-11988
-    implementation group: 'org.apache.xmlgraphics', name: 'xmlgraphics-commons', version: '2.6'
-    implementation('org.elasticsearch:elasticsearch') {
-        version {
-            strictly '7.17.4'
-        }
-    }
-    implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.5.10'
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.5'
-    implementation group: 'org.slf4j', name: 'slf4j-ext', version: '2.0.0-alpha7'
-    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.8'
-    implementation 'org.springframework.boot:spring-boot-configuration-processor'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.2'
-    implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.3'
-
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
-    testImplementation group: 'com.auth0', name: 'java-jwt', version: '3.19.2'
-    testImplementation 'com.github.hmcts:fortify-client:1.2.1:all'
-    testImplementation group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
-    testImplementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
-    testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: serenity
-    testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: serenity
-    testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: serenity, {
-        exclude module: 'jaxb-osgi'
-    }
-    testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: serenity
-    testImplementation (group: 'org.docx4j', name: 'docx4j', version: '6.1.2') {
-        exclude module: 'slf4j-log4j12'
-    }
-    testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: junitJupiterVersion
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.17.1'
-
-    // Contract Tests
-    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: pact_version
-    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: pact_version
-    contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.7.1'
-    contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitJupiterVersion
-    contractTestRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitJupiterVersion
-    contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitJupiterVersion
-    contractTestRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.8.2'
-    contractTestImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
-    contractTestImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.2'
-    contractTestImplementation group: 'org.springframework.cloud', name: 'spring-cloud-netflix-ribbon', version: '2.2.10.RELEASE'
-    contractTestImplementation sourceSets.main.runtimeClasspath
-    contractTestImplementation sourceSets.test.runtimeClasspath
-
-    integrationTestImplementation sourceSets.main.runtimeClasspath
-    integrationTestImplementation sourceSets.test.runtimeClasspath
-}
-
-bootJar {
-    getArchiveFileName().set(provider {
-        'et-cos.jar'
-    })
-
-    manifest {
-        attributes('Implementation-Version': project.version.toString())
-    }
-}
-
-wrapper {
-    distributionType = Wrapper.DistributionType.ALL
-}
-=======
 plugins {
     id 'application'
     id 'java'
@@ -735,4 +366,3 @@ bootJar {
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
-
